syntax = "proto2";
package apphosting.ext.datastore_admin;
option java_outer_classname = "BackupProtos";
message Backup {
  optional BackupInfo backup_info = 1;
  repeated KindBackupInfo kind_info = 2;
}
message BackupInfo {
  optional string backup_name = 1;
  optional int64 start_timestamp = 2;
  optional int64 end_timestamp = 3;
}
message KindBackupInfo {
  required string kind = 1;
  repeated string file = 2;
  optional EntitySchema entity_schema = 3;
  optional bool is_partial = 4 [default = false];
}
message EntitySchema {
  message Type {
    optional bool is_list = 1;
    repeated EntitySchema.PrimitiveType primitive_type = 2;
    repeated EntitySchema embedded_schema = 3;
  }
  message Field {
    required string name = 1;
    repeated EntitySchema.Type type = 2;
    optional string field_name = 3;
  }
  enum PrimitiveType {
    FLOAT = 0;
    INTEGER = 1;
    BOOLEAN = 2;
    STRING = 3;
    DATE_TIME = 4;
    RATING = 5;
    LINK = 6;
    CATEGORY = 7;
    PHONE_NUMBER = 8;
    POSTAL_ADDRESS = 9;
    EMAIL = 10;
    IM_HANDLE = 11;
    BLOB_KEY = 12;
    TEXT = 13;
    BLOB = 14;
    SHORT_BLOB = 15;
    USER = 16;
    GEO_POINT = 17;
    REFERENCE = 18;
  }
  optional string kind = 1;
  repeated Field field = 2;
}
